--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,6 @@
 
+@use "../abstracts/mixins";
+
 * { 
     margin: 0;
     padding: 0;
@@ -15,10 +17,10 @@ html {
     overflow-x:hidden; //removes margins on the sides (enable also on body)
     box-sizing: border-box; 
     ///////////////////////////////////////////////////media queries
-    @include respond(big-desktop) {font-size: 75%;} // 1 rem = 12px,, 12px/16px = 75%
-    @include respond(tab-land) {font-size: 62.5%;} // 1 rem = 10px,, 10px/16px=62.5%
-    @include respond(tab-land2) {font-size: 56.25%;} // 1 rem = 9px,, 9px/16px=56.25%
-    @include respond(tab-port) {font-size: 50%;} // 1 rem = 8px,, 8px/16px=50%
+    @include mixins.respond(big-desktop) {font-size: 75%;} // 1 rem = 12px,, 12px/16px = 75%
+    @include mixins.respond(tab-land) {font-size: 62.5%;} // 1 rem = 10px,, 10px/16px=62.5%
+    @include mixins.respond(tab-land2) {font-size: 56.25%;} // 1 rem = 9px,, 9px/16px=56.25%
+    @include mixins.respond(tab-port) {font-size: 50%;} // 1 rem = 8px,, 8px/16px=50%
     // @include respond(phone) { font-size: 50%;} //not in use
 }
 
