--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,40 +1,44 @@
-body{
-    // font-family: 'Lato', 'Arial', sans-serif;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400; 
-    line-height: 1.6; //1.6-1.7
-    color: --clr-gray-light2;
+@use "../abstracts/mixins";
+
+body {
+  // font-family: 'Lato', 'Arial', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-.heading-secondary{
-    font-size: 4rem;
-    text-transform: uppercase;
-    letter-spacing: .2rem;
+.heading-primary {
+  font-size: 4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 700;
+  background-image: linear-gradient(
+    to right,
+    --clr-light,
+    --clr-dark
+  ); //bg gradient
+  display: inline-block; //makes the bg wrap text only
+  -webkit-background-clip: text; // clip bg to text
+  background-clip: text;
+  color: transparent; //makes the text transparent
+  transition: all 0.2s;
+
+  @include mixins.respond(phone) {
+    font-size: 2.7rem;
     font-weight: 700;
-    background-image: linear-gradient(to right,--clr-light,--clr-dark); //bg gradient
-    display: inline-block; //makes the bg wrap text only
-    -webkit-background-clip: text; // clip bg to text
-    color: transparent; //makes the text transparent
-    transition: all 0.2s;
-
-    @include respond(phone) {
-        font-size: 2.7rem;
-        font-weight: 700;
-    }
-    &:hover {
-        transform: skewY(4deg) skewX(15deg) scale(1.1);
-        text-shadow: .5rem 1rem 2rem rgba(black,0.4);
-    }
-    &:focus{
-        outline: none;
-    }
+  }
+  &:hover {
+    transform: skewY(4deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(black, 0.4);
+  }
+  &:focus {
+    outline: none;
+  }
 }
 
-.heading3{
-    font-size: 2rem;
-    text-transform: uppercase;
+.heading3 {
+  font-size: 2rem;
+  text-transform: uppercase;
 }
 
-.paragraph{
-    font-size: 1.7rem;
+.paragraph {
+  font-size: 1.7rem;
 }
