--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,174 +1,167 @@
-.btn{
-    
-    &,&:link,&:visited {
-        border-radius: 10rem;
-        padding: 1.5rem 4rem;
-        text-decoration: none;
-        transition: all .2s;
-        position: relative;    
-        font-size: 1.6rem;
-        border: none; //removes default border if exist (like btn's)
-        cursor: pointer;
-        
-    }
-    //on hover
-    &:hover{
-     box-shadow: 0px 1rem 2rem rgba(var(--clr-black) , .4);
-     transform: translateY(-4px);
-
+.btn {
+  &,
+  &:link,
+  &:visited {
+    border-radius: 10rem;
+    padding: 1.5rem 4rem;
+    text-decoration: none;
+    transition: all 0.2s;
+    position: relative;
+    font-size: 1.6rem;
+    border: none; //removes default border if exist (like btn's)
+    cursor: pointer;
+  }
+  //on hover
+  &:hover {
+    box-shadow: 0px 1rem 2rem rgba(var(--clr-black), 0.4);
+    transform: translateY(-4px);
 
     //on hover fadeout effect
-        &::after{
-            transform: scaleX(1.4) scaleY(1.6); /*for even scaling*/
-            opacity: 0; /*for fade out effect */
-        }
-    }   
-    //on click and focus
-    &:active,
-    &:focus{
-        outline: none; //removes focus outline
-        transform: translateY(-1px);
-        box-shadow: 0px .5rem 1rem rgba(var(--clr-black), .4);
-    }
-    //white button
-    &--white{
-        background-color:var(--clr-white);
-        color: var(--clr-gray-light3);
-        &::after{
-            background-color: var(--clr-white);   
-        }
-    }
-    //transparent green
-    &--green{
-        &:link,&:visited {
-        background-color:transparent;
-        color: var(--clr-primary);
-        border: 1px solid var(--clr-primary);
-        display: inline-block;
-        font-size: 1.8rem;
-        
-        }
-        &:hover{
-            background-color: var(--clr-dark); 
-            color: var(--clr-white);  
-        }
-    }
-
-    &--greenfill{
-        background-color:var(--clr-primary);
-        color: var(--clr-white);
-        text-transform: uppercase;
-        &::after{
-            background-color: var(--clr-primary);   
-        }
-
-    }
-
     &::after {
-        content: '';
-        display: inline-block;
-        height: 100%;
-        width:  100%;
-        border-radius: 10rem;
-        transition: all .5s;
-        position: absolute; /*position after btn behind original*/
-        top:0;
-        left:0;
-        z-index: -1;
+      transform: scaleX(1.4) scaleY(1.6); /*for even scaling*/
+      opacity: 0; /*for fade out effect */
     }
+  }
+  //on click and focus
+  &:active,
+  &:focus {
+    outline: none; //removes focus outline
+    transform: translateY(-1px);
+    box-shadow: 0px 0.5rem 1rem rgba(var(--clr-black), 0.4);
+  }
+  //white button
+  &--white {
+    background-color: var(--clr-white);
+    color: var(--clr-gray-light3);
+    &::after {
+      background-color: var(--clr-white);
+    }
+  }
+  //transparent green
+  &--green {
+    &:link,
+    &:visited {
+      background-color: transparent;
+      color: var(--clr-primary);
+      border: 1px solid var(--clr-primary);
+      display: inline-block;
+      font-size: 1.8rem;
+    }
+    &:hover {
+      background-color: var(--clr-dark);
+      color: var(--clr-white);
+    }
+  }
 
-    &--animated{ 
-        animation: moveInUp 0.5s ease-out 1.75s backwards;
+  &--greenfill {
+    background-color: var(--clr-primary);
+    color: var(--clr-white);
+    text-transform: uppercase;
+    &::after {
+      background-color: var(--clr-primary);
     }
+  }
+
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    transition: all 0.5s;
+    position: absolute; /*position after btn behind original*/
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+
+  &--animated {
+    animation: moveInUp 0.5s ease-out 1.75s backwards;
+  }
 }
 
 //inline button, underlined
 // button html element
-.btn-inline{
-    border: none;
-    color: var(--clr-primary);
-    font-size: inherit; //set size on parent el
-    border-bottom: 1px solid currentColor;
-    padding-bottom: 2px;
-    display: inline-block;
-    background-color: transparent;
-    cursor: pointer;
-    transition: all .2s;
+.btn-inline {
+  border: none;
+  color: var(--clr-primary);
+  font-size: inherit; //set size on parent el
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s;
 
-    & span {
-        margin-left: 3px;
-        transition: all .2s;
+  & span {
+    margin-left: 3px;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    color: var(--clr-gray-dark1);
+
+    span {
+      margin-left: 8px;
     }
-
-    &:hover{
-        color: var(--clr-gray-dark1);
-
-        span{
-            margin-left: 8px;
-        }
-    }
+  }
 }
 
 //works on buttom (html element)
-.btn-pulsate{
-    &:focus {
-        outline: none;
-        animation: pulsate 1s infinite;
-    }
+.btn-pulsate {
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
 }
-
 
 //pulsing animation
 @keyframes pulsate {
-    0%{
-        transform: scale(1);
-        box-shadow: none;
-    }
-    50%{
-        transform: scale(1.1);
-        box-shadow: 0 1rem 4rem rgba(0,0,0 , .25);
-    }
-    100%{
-        transform: scale(1);
-        box-shadow: none;
-    }
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+  50% {
+    transform: scale(1.1);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
 }
 
+.btn-moving {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 500px;
+  background: linear-gradient(to right, var(--clr-light), var(--clr-dark));
+  color: white;
+  position: relative;
+  overflow: hidden;
 
-
-
-.btn-moving{
-    font-size: 1.5rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 500px;
-    background: linear-gradient(to right, var(--clr-light), var(--clr-dark));
-    color: white;
-    position: relative;
-    overflow: hidden;
-
-    & > * { //2 child visible & invisible
-        display: inline-block;
-        transition: all .5s;
-        height: 100%;
-        width: 100%;
-    }
-    &__visible{
-        padding: 2rem 7.5rem;
-    }
-    &__invisible{
-        position: absolute;
-        left: 0;
-        top: -150%;
-        padding: 2rem 0;
-    }
-    &:hover &__invisible{
-        top:0;
-    }
-    &:hover &__visible{
-        transform: translateY(100%);
-    }
-    
-
+  & > * {
+    //2 child visible & invisible
+    display: inline-block;
+    transition: all 0.5s;
+    height: 100%;
+    width: 100%;
+  }
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+  &__invisible {
+    position: absolute;
+    left: 0;
+    top: -150%;
+    padding: 2rem 0;
+  }
+  &:hover &__invisible {
+    top: 0;
+  }
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
 }
