--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,39 +1,41 @@
-.feature-box{
+@use "../abstracts/mixins";
 
-    background-color: rgba(var(--clr-white),.7);
-    box-shadow: 0 2rem 5rem rgba(var(--clr-black),.4);
-    border-radius: 3px;
-    text-align: center;
-    transition: all 0.3s;
-    padding: 2.5rem;
-    height: 40rem;
+.feature-box {
+  background-color: rgba(var(--clr-white), 0.7);
+  box-shadow: 0 2rem 5rem rgba(var(--clr-black), 0.4);
+  border-radius: 3px;
+  text-align: center;
+  transition: all 0.3s;
+  padding: 2.5rem;
+  height: 40rem;
 
-    @include respond(tab-port) {
-        height: fit-content;
-    }
+  @include mixins.respond(tab-port) {
+    height: fit-content;
+  }
 
-    .heading3{
-        font-size: 1.8rem;
-    }
+  .heading3 {
+    font-size: 1.8rem;
+  }
 
-    &__icon{
-        font-size: 7rem;
-        background-image: linear-gradient(to right,var(--clr-light),var(--clr-dark)); //bg gradient
-        display: inline-block;                  //makes the bg wrap text only
-        -webkit-background-clip: text; // clip bg to text
-        color: transparent; //makes the text transparent
-        
-    }
+  &__icon {
+    font-size: 7rem;
+    background-image: linear-gradient(
+      to right,
+      var(--clr-light),
+      var(--clr-dark)
+    ); //bg gradient
+    display: inline-block; //makes the bg wrap text only
+    -webkit-background-clip: text; // clip bg to text
+    color: transparent; //makes the text transparent
+  }
 
-    &:hover{
-        transform: translateY(-.5rem) scale(1.05);
-        box-shadow: 0 2rem 6rem rgba(var(--clr-black),.5);
-    }
+  &:hover {
+    transform: translateY(-0.5rem) scale(1.05);
+    box-shadow: 0 2rem 6rem rgba(var(--clr-black), 0.5);
+  }
 
-    &__text{
-        color: var(--clr-gray-light3);
-        font-size: 1.5rem;
-    }
-
-
+  &__text {
+    color: var(--clr-gray-light3);
+    font-size: 1.5rem;
+  }
 }
