--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,96 +1,78 @@
+@use "../abstracts/mixins";
 
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&/#&&&&&&&/&&&&&&&%(&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&/ /              &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%     LOGO (  &#%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&            (&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&(#             (#%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-// &%#(//(///(&&(((/((          LINKS        (#((((*#(&&#/(/(/%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&(//*#/%((//(#/((/(/((((////((#//((//((#(/((%&&&&&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&#(/(/(*#((#((/#/(((#//#######((%((#######(/##%/(####%/#%&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%&%%%%%    COPYRIGHTS        %%%%%%%%%%%%&&&&&&&&&
-// &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%&&&&&&&&&&&&&&&&&&&&&&&&&&&&
-.footer{
-    background-color: var(--clr-gray-dark1);
-    padding: 10rem;
-    font-size: 1.4rem;
-    
-    @include respond(tab-port){
-        padding: 8rem 0;
+.footer {
+  background-color: var(--clr-gray-dark1);
+  padding: 10rem;
+  font-size: 1.4rem;
+
+  @include mixins.respond(tab-port) {
+    padding: 8rem 0;
+  }
+
+  &__logo-box {
+    text-align: center;
+    margin-bottom: 8rem;
+
+    @include mixins.respond(tab-port) {
+      margin-bottom: 4rem;
+    }
+  }
+
+  &__logo {
+    width: 15rem;
+    height: auto;
+  }
+
+  &__nav {
+    border-top: 1px solid var(--clr-gray-dark1);
+    padding-top: 2rem;
+    display: inline-block;
+
+    @include mixins.respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  &__list {
+    list-style: none;
+  }
+
+  &__item {
+    display: inline-block;
+
+    &:not(:last-child) {
+      margin-right: 1.5rem;
+    }
+  }
+
+  &__link {
+    &:link,
+    &:visited {
+      background-color: var(--clr-gray-dark1);
+      color: var(--clr-gray-light1);
+      text-transform: uppercase;
+      display: inline-block;
+      text-decoration: none;
+      transition: all 0.2s;
     }
 
-    &__logo-box{
-        text-align: center;
-        margin-bottom: 8rem;
-
-        @include respond(tab-port){
-            margin-bottom: 4rem;
-        }
+    &:hover,
+    &:active {
+      color: var(--clr-primary);
+      box-shadow: 0 1rem 2rem rgba(var(--clr-black), 0.4);
+      transform: rotate(5deg) scale(1.3);
     }
-
-    &__logo{
-        width: 15rem;
-        height: auto;
+  }
+  &__copyright {
+    color: var(--clr-gray-light1);
+    border-top: 1px solid var(--clr-gray-light3);
+    padding-top: 2rem;
+    width: 80%;
+    float: right;
+    @include mixins.respond(tab-port) {
+      float: none;
+      width: 100%;
     }
-
-    &__nav{
-        border-top: 1px solid var(--clr-gray-dark1);
-        padding-top: 2rem;
-        display: inline-block;
-
-        @include respond(tab-port){
-            width: 100%;
-            text-align: center;
-        }
-    }
- 
-    &__list{
-        list-style: none;
-
-    }
-
-    &__item{
-        display: inline-block;
-
-        &:not(:last-child){
-            margin-right: 1.5rem;
-        }
-    }
-
-    &__link{
-        &:link,
-        &:visited{
-            background-color: var(--clr-gray-dark1);
-            color: var(--clr-gray-light1);
-            text-transform: uppercase;
-            display: inline-block;
-            text-decoration: none;
-            transition: all .2s;
-        }
-
-        &:hover,
-        &:active{
-            color:var(--clr-primary);
-            box-shadow: 0 1rem 2rem rgba(var(--clr-black),.4);
-            transform: rotate(5deg) scale(1.3);
-
-        }
-
-    }
-    &__copyright{
-        color: var(--clr-gray-light1);
-        border-top: 1px solid var(--clr-gray-light3);
-        padding-top: 2rem;
-        width: 80%;
-        float: right;
-        @include respond(tab-port){
-            float: none;
-            width: 100%;
-        }
-    }
-    
-
+  }
 }
