--- a/sass/layout/_layout1.scss
+++ b/sass/layout/_layout1.scss
@@ -1,423 +1,415 @@
-.container{
-    max-width: 120rem;
-    margin: 8rem auto;
-    background-color: var(--clr-gray-light2);
-    box-shadow:var(--shadow-dark);
-    min-height: 50rem;
+@use "../abstracts/mixins";
 
-    @include respond(tab-land){
-        margin: 0;
-        max-width: 100%;
-    }
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--clr-gray-light2);
+  box-shadow: var(--shadow-dark);
+  min-height: 50rem;
+
+  @include mixins.respond(tab-land) {
+    margin: 0;
+    max-width: 100%;
+  }
 }
 //HEADER///////////////////////////////////
-.header{
-    height: 7rem;
-    background-color: var(--clr-white);
-    border-bottom: 1px solid var(--clr-gray-light2) ;
-    display: flex;
-    justify-content:space-between ;
-    align-items: center;
+.header {
+  height: 7rem;
+  background-color: var(--clr-white);
+  border-bottom: 1px solid var(--clr-gray-light2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    //moves search to a new row
-    @include respond(phone-small){
-        flex-wrap: wrap;
-        align-content: space-evenly;
-        height: 11rem;
-    }
+  //moves search to a new row
+  @include mixins.respond(phone-small) {
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    height: 11rem;
+  }
 }
 //LOGO
-.logo{
-    height: 3.25rem;
-    margin-left: 2rem;
+.logo {
+  height: 3.25rem;
+  margin-left: 2rem;
 }
 
 //SEARCH BOX
-.search{
-    flex: 0 0 40%; //don't grow/shrink, take 40%
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.search {
+  flex: 0 0 40%; //don't grow/shrink, take 40%
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    //moves search to a new row
-    @include respond(phone-small){
-        order: 10;
-        flex: 0 0 100%;
-        padding-right:1.3rem ;
+  //moves search to a new row
+  @include mixins.respond(phone-small) {
+    order: 10;
+    flex: 0 0 100%;
+    padding-right: 1.3rem;
+  }
+
+  &__input {
+    font-family: inherit;
+    font-size: 1.4rem;
+    color: inherit;
+    padding: 0.9rem 2rem;
+    margin-right: -3.25rem;
+    background-color: var(--clr-gray-light2);
+    border: none;
+    border-radius: 100px;
+    width: 90%;
+    transition: all 0.2s;
+
+    &:focus {
+      outline: none;
+      width: 100%;
+      background-color: var(--clr-gray-light3);
     }
 
-    &__input{
-        font-family: inherit;
-        font-size: 1.4rem;
-        color: inherit;
-        padding: .9rem 2rem;
-        margin-right: -3.25rem;
-        background-color: var(--clr-gray-light2);
-        border: none;
-        border-radius: 100px;
-        width: 90%;
-        transition: all .2s;
+    &::-webkit-input-placeholder {
+      //safari & chrome
+      font-weight: 100;
+      color: var(--clr-gray-light4);
+    }
+  }
 
-        &:focus{
-            outline: none;
-            width: 100%;
-            background-color: var(--clr-gray-light3);
-        }
-
-        &::-webkit-input-placeholder{ //safari & chrome
-            font-weight: 100;
-            color:var(--clr-gray-light4);
-        }
+  &__input:focus + &__button {
+    background-color: var(--clr-gray-light3);
+  }
+  &__button {
+    border: none;
+    background-color: var(--clr-gray-light2);
+    transition: all 0.2s;
+    border-radius: 50%;
+    &:focus {
+      outline: none;
     }
-
-    &__input:focus + &__button{
-        background-color: var(--clr-gray-light3);
+    &:active {
+      transform: translateY(2px);
     }
-    &__button{
-        border: none;
-        background-color: var(--clr-gray-light2);
-        transition: all .2s;
-        border-radius: 50%;
-        &:focus{
-            outline: none;
-             
-        }
-        &:active{
-            transform: translateY(2px);
-        }
-    }
-    &__icon{
-        fill: var(--clr-gray-dark3);
-        height: 2rem;
-        width: 2rem;
-    }
+  }
+  &__icon {
+    fill: var(--clr-gray-dark3);
+    height: 2rem;
+    width: 2rem;
+  }
 }
 
 //USER NAV
-.user-nav{
-    align-self: stretch;
+.user-nav {
+  align-self: stretch;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & > * {
+    //padding all the children of user-nav
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+  & > *:hover {
+    background-color: var(--clr-gray-light2);
+  }
+
+  &__icon-box {
+    position: relative;
+  }
+
+  &__icon {
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: var(--clr-gray-dark2);
+  }
+
+  &__notification {
+    font-size: 0.8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 200px;
+    background-color: var(--clr-primary);
+    color: var(--clr-white);
+    position: absolute;
+    top: 1.5rem;
+    right: 1.4rem;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    & > * {
-        //padding all the children of user-nav
-        padding: 0 2rem;
-        cursor: pointer;
-        height: 100%;
-        display: flex;
-        align-items: center;
-    }
-    & > *:hover {
-        background-color: var(--clr-gray-light2);
-    }
-
-    &__icon-box{
-        position: relative;
-    }
-
-    &__icon{
-        height: 2.5rem;
-        width: 2.5rem;
-        fill: var(--clr-gray-dark2);
-    }
-
-    &__notification{
-        font-size: .8rem;
-        height: 1.75rem;
-        width: 1.75rem;
-        border-radius: 200px;
-        background-color: var(--clr-primary);
-        color: var(--clr-white);
-        position: absolute;
-        top:1.5rem;
-        right:1.4rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    &__user-photo{
-        height: 4.75rem;
-        border-radius: 50%;
-        margin-right: 1rem;
-    }
-    &__user-name{
-        font-size: 1.6rem;
-    }
-
-
+  }
+  &__user-photo {
+    height: 4.75rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+  &__user-name {
+    font-size: 1.6rem;
+  }
 }
 
-
-
-.content{
-    display: flex;
-    @include respond(tab-port){
-        flex-direction: column;
-    }
-    
+.content {
+  display: flex;
+  @include mixins.respond(tab-port) {
+    flex-direction: column;
+  }
 }
-
 
 ///////////////////////////////////////////////////
-.hotel-view{
-    // background-color: red; //text
-    flex: 1;
-    // height is cancelled - content defines height
-    // height:80rem; 
+.hotel-view {
+  // background-color: red; //text
+  flex: 1;
+  // height is cancelled - content defines height
+  // height:80rem;
 }
 //gallery
-.gallery{
-    display: flex;
-    &__photo{
-        width: 100%;
-        display: block;
-    }
+.gallery {
+  display: flex;
+  &__photo {
+    width: 100%;
+    display: block;
+  }
 }
 //overview
-.overview{
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--clr-gray-light2);
+  background-color: var(--clr-white);
+  &__h1 {
+    font-size: 3rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1rem 3rem;
+    @include mixins.respond(phone) {
+      font-size: 2.5rem;
+      padding: 0.75rem 2.5rem;
+    }
+  }
+
+  &__stars {
+    margin-right: auto;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--clr-gray-light2);
-    background-color: var(--clr-white);
-    &__h1{
-        font-size: 3rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        padding: 1rem 3rem;
-        @include respond(phone){
-            font-size: 2.5rem;
-            padding: .75rem 2.5rem;
-        }
-    }
+  }
 
-    &__stars{
-        margin-right: auto;
-        display: flex;
-        align-items: center;
-    }
-
-    &__icon-star,
-    &__icon-location{
-        width: 1.75rem;
-        height: 1.75rem;
-        fill: var(--clr-primary);
-    }
-    &__location{
-        font-size: 1.2rem;
-        display: flex;
-    }
-
-    &__icon-location{
-        margin-right: .5rem;
-    }
-
-    &__rating{
-        background-color: var(--clr-primary);
-        color: var(--clr-white);
-        margin-left: 3rem;
-        align-self: stretch;
-        padding: .25rem 2.25rem;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        @include respond(phone){
-            padding: .15rem 1.25rem;
-            margin-left: auto;
-        }
-    }
-
-    &__rating-average{
-        font-size: 2.25rem;
-    }
-    &__rating-count{
-        text-transform: uppercase;
-    }
-}
-
-.detail{
-    font-size: 1.4rem;
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--clr-primary);
+  }
+  &__location {
+    font-size: 1.2rem;
     display: flex;
-    padding: 4.5rem;
-    background-color: var(--clr-gray-light1);
-    border-bottom: 1px solid var(--clr-gray-light3);
-    @include respond(tab-port){
-        padding: 3rem;
-    }
-    @include respond(phone){
-        flex-direction: column;
-    }
-}
+  }
 
-.description{
-    color:var(--clr-gray-dark2);
-    background-color: var(--clr-white);
-    box-shadow: --shadow-lighter;
-    padding: 3rem;
-    flex: 0 0 60%;
-    margin-right: 4.5rem;
-    @include respond(tab-port){
-        padding: 2rem;
-        margin-right: 3rem;
-    }
-    @include respond(phone){
-        margin-right: 0rem;
-        margin-bottom: 3rem;
-    }
-}
+  &__icon-location {
+    margin-right: 0.5rem;
+  }
 
-.paragraph:not(:last-of-type){
-    margin-bottom: 2rem;
-}
+  &__rating {
+    background-color: var(--clr-primary);
+    color: var(--clr-white);
+    margin-left: 3rem;
+    align-self: stretch;
+    padding: 0.25rem 2.25rem;
 
-.list{
-    list-style: none;
-    margin: 3rem 0;
-    padding: 3rem 0;
-    border-top: 1px solid var(--clr-gray-light3);
-    border-bottom: 1px solid var(--clr-gray-light3);
-    display: flex;
-    flex-wrap: wrap;
-
-    &__item{
-        flex: 0 0 50%; //2 element in a row
-        margin-bottom: .7rem;
-        font-size: 1.5rem;
-    }
-
-    &__item::before{
-        content: "";
-        display: inline-block;
-        
-        height: 1rem;
-        width:  1rem;
-        margin-right: .7rem;
-        
-        //older browser
-        background-image: url(../img/chevron-thin-right.svg);
-        background-size: cover;
-        @supports (-webkit-mask-image: url()) or (mask-image: url()){
-            //new browsers - masks
-            background-color:var(--clr-primary);
-            -webkit-mask-image: url(../img/chevron-thin-right.svg);
-            -webkit-mask-size: cover;
-            mask-image: url(../img/chevron-thin-right.svg);
-            mask-size: cover;
-            background-image: none;
-            background-size: none;
-        }
-    }
-
-    
-}
-
-.recommend{
-    font-size: 1.3rem;
-    
-    display: flex;
-    align-items: center;
-    &__count {
-        margin-right: auto ;
-        flex: 1 0;
-    }
-    &__friends{
-        display: flex;
-    }
-    &__photo{
-        box-sizing: content-box;
-        height: 4rem;
-        width: 4rem;
-        border-radius: 50%;
-        border: 3px solid var(--clr-white);
-        &:not(:last-child){
-            margin-right: -2rem;
-        }
-    }
-}
-
-.user-reviews{
     display: flex;
     flex-direction: column;
-    flex: 1;
     align-items: center;
-    
+    justify-content: center;
+    @include mixins.respond(phone) {
+      padding: 0.15rem 1.25rem;
+      margin-left: auto;
+    }
+  }
+
+  &__rating-average {
+    font-size: 2.25rem;
+  }
+  &__rating-count {
+    text-transform: uppercase;
+  }
 }
 
-.review{
-    background-color:var(--clr-white);
-    box-shadow: var(--shadow-lighter);
+.detail {
+  font-size: 1.4rem;
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--clr-gray-light1);
+  border-bottom: 1px solid var(--clr-gray-light3);
+  @include mixins.respond(tab-port) {
     padding: 3rem;
-    margin-bottom: 3.5rem;
-    color:var(--clr-gray-dark2);
-    position: relative;
-    overflow: hidden;
-
-    @include respond(tab-port){
-        padding: 2rem;
-        margin-bottom: 3rem;
-    }
-    &__text{
-        z-index: 10;
-        position: relative;
-    }
-   
-    &__photo{
-        height: 4.5rem;
-        width: 4.5rem;
-        border-radius: 50%;
-        margin-right: 2rem;
-    }
-    &__user{
-        padding-top: 2rem;
-        display: flex;
-        align-items: center;
-    }
-    &__user-box{
-        margin-right: auto;
-    }
-    &__user-name{
-        text-transform: uppercase;
-    }
-    &__user-date{
-        font-size: 1.2rem;
-    }
-    &__rating{
-        color: var(--clr-primary);
-        font-size: 2.8rem;
-        font-weight: 300;
-    }
-    &::before{
-        content: "\201C";
-        font-family: sans-serif;
-        line-height: 1px;
-        position: absolute;
-        top: 5rem;
-        left: 0rem;
-        font-size: 10rem;
-        color:var(--clr-gray-light2)
-        
-    }
+  }
+  @include mixins.respond(phone) {
+    flex-direction: column;
+  }
 }
 
-.cta{
-    padding: 3.5rem 0;
-    text-align: center;
-    font-size: 1.3rem;
-    font-weight: 300;
-    color:var(--clr-gray-dark2);
-    
-    @include respond(tab-port){
-        padding: 2.5rem 0;
-    }
+.description {
+  color: var(--clr-gray-dark2);
+  background-color: var(--clr-white);
+  box-shadow: --shadow-lighter;
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+  @include mixins.respond(tab-port) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
+  @include mixins.respond(phone) {
+    margin-right: 0rem;
+    margin-bottom: 3rem;
+  }
+}
 
-    &__book-now{
-        text-transform: uppercase;
-    };
-    & h2{
-        font-size: 1.8rem;
-        margin-bottom: 1.5rem;
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: 1px solid var(--clr-gray-light3);
+  border-bottom: 1px solid var(--clr-gray-light3);
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 0 0 50%; //2 element in a row
+    margin-bottom: 0.7rem;
+    font-size: 1.5rem;
+  }
+
+  &__item::before {
+    content: "";
+    display: inline-block;
+
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+
+    //older browser
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      //new browsers - masks
+      background-color: var(--clr-primary);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      background-image: none;
+      background-size: none;
     }
+  }
+}
+
+.recommend {
+  font-size: 1.3rem;
+
+  display: flex;
+  align-items: center;
+  &__count {
+    margin-right: auto;
+    flex: 1 0;
+  }
+  &__friends {
+    display: flex;
+  }
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid var(--clr-white);
+    &:not(:last-child) {
+      margin-right: -2rem;
+    }
+  }
+}
+
+.user-reviews {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+}
+
+.review {
+  background-color: var(--clr-white);
+  box-shadow: var(--shadow-lighter);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  color: var(--clr-gray-dark2);
+  position: relative;
+  overflow: hidden;
+
+  @include mixins.respond(tab-port) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
+  &__text {
+    z-index: 10;
+    position: relative;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 2rem;
+  }
+  &__user {
+    padding-top: 2rem;
+    display: flex;
+    align-items: center;
+  }
+  &__user-box {
+    margin-right: auto;
+  }
+  &__user-name {
+    text-transform: uppercase;
+  }
+  &__user-date {
+    font-size: 1.2rem;
+  }
+  &__rating {
+    color: var(--clr-primary);
+    font-size: 2.8rem;
+    font-weight: 300;
+  }
+  &::before {
+    content: "\201C";
+    font-family: sans-serif;
+    line-height: 1px;
+    position: absolute;
+    top: 5rem;
+    left: 0rem;
+    font-size: 10rem;
+    color: var(--clr-gray-light2);
+  }
+}
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: 300;
+  color: var(--clr-gray-dark2);
+
+  @include mixins.respond(tab-port) {
+    padding: 2.5rem 0;
+  }
+
+  &__book-now {
+    text-transform: uppercase;
+  }
+  & h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+  }
 }
